# final-nn

./: autoencoder.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
